--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<div class="ui-g">
+    <div class="ui-g-4">
+      <menus-list>
+      </menus-list>
+    </div>
+
+    <div class="ui-g-4">
+      Col2
+    </div>
+
+    <div class="ui-g-4">
+      Col3
+    </div>
+</div>
