--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,12 @@
     </div>
 
     <div class="ui-g-6">
-      Col2
+      <article-form>                
+      </article-form>
     </div>
 
     <div class="ui-g-3">
-      Col3
+      <widget-list>        
+      </widget-list>
     </div>
 </div>
