--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <div class="ui-g">
-
+  
     <div class="ui-g-3">
-      <menus-list>
+      <menus-list > 
       </menus-list>
     </div>
 
-    <div class="ui-g-6">
-      <article-form>                
-      </article-form>
+    <div class="ui-g-6"> 
+      <router-outlet></router-outlet>                                
     </div>
 
     <div class="ui-g-3">
