--- a/src/app/article.component/article.component.html
+++ b/src/app/article.component/article.component.html
@@ -1,1 +1,49 @@
-Article-form
+
+<div class="ui-g pull-right">
+    <button pButton type="button" label="Save Draft" class="ui-button-info"></button>
+    <button pButton type="button" label="Review"></button>
+    <button pButton type="button" label="Publish" class="ui-button-success"></button>
+</div>
+<br><br>
+<div class="ui-g">
+    <div class="ui-g-2">
+        Heading
+    </div>
+    <div class="ui-g-10">
+        <input type="text"  id="article-heading" pInputText />        
+    </div>
+</div>
+<br><br>
+<div class="ui-g">
+    <div class="ui-g-2">
+        Edit Url
+    </div>
+    <div class="ui-g-10">
+        <input type="text" id="article-url" pInputText />        
+    </div>
+</div>
+
+<br><br>
+<div class="ui-g">
+    <div class="ui-g-2">
+        Summary
+    </div>
+    <div class="ui-g-10">
+        <input type="text" id="article-summary" pInputText />        
+    </div>
+</div>
+
+<br><br>
+<div class="ui-g">
+    <div class="ui-g-12">        
+        Description
+    </div>
+</div>
+
+<br><br>
+<div class="ui-g">
+    <div class="ui-g-12">                
+        <tinymce>            
+        </tinymce>
+    </div>
+</div>
