--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
       </menus-list>
     </div>
 
-    <div class="ui-g-6"> 
-      <router-outlet></router-outlet>                                
+    <div class="ui-g-6 article-margin-top">       
+      <router-outlet></router-outlet>                        
     </div>
 
     <div class="ui-g-3">
