--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar-specific{
+    margin-bottom: -7px;
+    color: white;
+}
+
+.article-margin-top{
+    margin-top: 25px;
+}
