--- a/src/app/widgets.component/widgets.component.html
+++ b/src/app/widgets.component/widgets.component.html
@@ -4,27 +4,35 @@
     </p-header>
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
 </p-panel>
+
 <p-panel >
     <p-header>
         Latest Earthquak
     </p-header>
-   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+    <p *ngIf="latest_earth_quak_article" [innerHTML]="latest_earth_quak_article.content">        
+    </p>   
 </p-panel>
+
 <p-panel >
     <p-header>
         BSE Sensex
     </p-header>
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
 </p-panel>
+
 <p-panel >
     <p-header>
         @Times Now Tweeter Feed
     </p-header>
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
 </p-panel>
+
 <p-panel >
     <p-header>
-        Hindustan Times Top News
+        Times Of India News
     </p-header>
-   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+
+    <p *ngIf="lates_toi_article">
+        {{lates_toi_article.description}}   
+    </p>    
 </p-panel>
