--- a/src/app/article.component/article.component.html
+++ b/src/app/article.component/article.component.html
@@ -11,11 +11,11 @@
 
     <div class="ui-g">
 
-        <div class="ui-g-1">
+        <div class="ui-g-2">
             Heading
         </div>
 
-        <div class="ui-g-11">
+        <div class="ui-g-10">
             <div class="article-form">
                 <input type="text"  name="heading" pInputText required ngModel #articlename="ngModel"/>                        
             </div>
@@ -29,10 +29,10 @@
 
     <br><br>
     <div class="ui-g">
-        <div class="ui-g-1">
+        <div class="ui-g-2">
             Edit Url
         </div>
-        <div class="ui-g-11">
+        <div class="ui-g-10">
 
             <div class=" article-form">
                 <input type="text" name="url" pInputText required ngModel #articleurl="ngModel" />                        
@@ -47,10 +47,10 @@
 
     <br><br>
     <div class="ui-g">
-        <div class="ui-g-1">
+        <div class="ui-g-2">
             Summary
         </div>
-        <div class="ui-g-11">
+        <div class="ui-g-10">
             <div class="article-form">
                 <input type="text" name="summary" pInputText required ngModel #articlesummary="ngModel"/>
             </div>
@@ -70,7 +70,10 @@
 
     <br>
     <div class="ui-g">
-        <div class="ui-g-12">                
+        <div class="ui-g-2">
+        </div>
+        
+        <div class="ui-g-10">                
             <tinymce name="description" ngModel #descr="ngModel" (ngModelChange)="get_readability_scores(descr.value)">           
             </tinymce>            
         </div>
