--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="ui-g">
   
-    <div class="ui-g-3">
+    <div class="ui-g-2 test123">
       <menus-list > 
       </menus-list>
     </div>
 
-    <div class="ui-g-6 article-margin-top">       
+    <div class="ui-g-7 article-margin-top ">        
       <router-outlet></router-outlet>                        
     </div>
 
