--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="ui-g">
   
     <div class="ui-g-2 test123">
-      <menus-list > 
-      </menus-list>
+      <app-menus-list > 
+      </app-menus-list>
     </div>
 
     <div class="ui-g-7 article-margin-top ">        
@@ -10,7 +10,7 @@
     </div>
 
     <div class="ui-g-3">
-      <widget-list>        
-      </widget-list>
+      <app-widget-list>        
+      </app-widget-list>
     </div>
 </div>
